--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -69,7 +69,7 @@
                     </li>
                     {% endif %}				
                 </ul>
-                <p class="copyright text-muted"> Copyright © <a href="http://mishagrol.github.io/" target="_blank">Digital Agro Group</a>,  <a href="https://github.com/projectpages" target="_blank">Project Pages</a> 2016. </p>
+                <p class="copyright text-muted"> Copyright © <a href="http://mishagrol.github.io/" target="_blank">DeepCrop</a>,  <a href="https://github.com/projectpages" target="_blank">Project Pages</a> 2016. </p>
             </div>
         </div>
     </div>
